Add comprehensive PropEr property-based testing suite
- Add PropEr dependency and eunit_formatters to test profile in rebar.config
- Create sock_proper_tests.erl with 8 comprehensive properties testing:
  * Endpoint creation with valid/invalid ports
  * Association creation and lifecycle management
  * Port collision detection
  * Concurrent connection handling
  * Endpoint options and configuration
- Integrate PropEr tests into existing EUnit test suite
- Add detailed README_PROPER.md documenting all test properties and usage
- Tests cover edge cases and provide extensive input space coverage

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,16 @@
 %% -*- erlang -*-
 {deps, [{redbug, "2.1.0"}]}.
 
+{profiles, [
+    {test, [
+        {deps, [
+            {proper, "1.5.0"},
+            {eunit_formatters, "0.6.0"}
+        ]},
+        {eunit_opts, [
+            {report, {eunit_progress, [colored, profile]}}
+        ]}
+    ]}
+]}.
+
 {erl_opts, [{platform_define, "^2[5678]", 'USE_SOCKET'}]}.
